@@ -20,6 +20,10 @@
         </license>
     </licenses>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <developers>
         <developer>
             <id>zen0x7</id>
@@ -79,6 +83,7 @@
                 <configuration>
                     <parallel>none</parallel>
                     <reuseForks>false</reuseForks>
+                    <argLine>--enable-native-access=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
             <plugin>
